html section 3 and 4

--- a/index.html
+++ b/index.html
@@ -11,19 +11,71 @@
   </head>
   <body>
 
-    <div>
+    <div class="one">
       <img src="front-end-dev-test-assets/hero.jpg" alt="photo of San Franscisco Bay Bridge">
       <img src="front-end-dev-test-assets/logo-white.svg" alt="RoosterGrin logo">
       <h1>WELCOME TO</h1>
       <h2>Rooster Grin</h2>
-      <button>Button</button>
+      <button class="square" id="purple">Button</button>
     </div>
 
-    <div>
-      <img src="front-end-dev-test-assets/img-1.jpg" alt="climbers helping each other">
-      <h3>LOREUM IPSUM</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam fugit, cupiditate error asperiores in minus reiciendis, quidem commodi ipsam dolorum repellat aut eligendi neque voluptate eius obcaecati quos temporibus autem?</p>
+    <div class="two">
+      <div class="left">
+        <h3>LOREUM IPSUM</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam fugit, cupiditate error asperiores in minus reiciendis, quidem commodi ipsam dolorum repellat aut eligendi neque voluptate eius obcaecati quos temporibus autem?</p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#carratCollapse" aria-expanded="false" aria-controls="carratCollapse">
+          Lorem ipsum
+        </button>
+        <div class="collapse" id="carratCollapse">
+          <div class="card card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <img src="front-end-dev-test-assets/img-1.jpg" alt="climbers helping each other">
+      </div>
+    </div>
 
+    <div class="three">
+      <h3>LOREUM IPSUM</h3>
+      <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
+      <button class="square" id="orange">Button</button>
+    </div>
+
+    <div class="four">
+      <div class="left">
+        <h4>LOREM IPSUM</h4> 
+        <h4>DOLOR SIT AMET</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#carratCollapse" aria-expanded="false" aria-controls="carratCollapse">
+          Lorem ipsum
+        </button>
+        <div class="collapse" id="carratCollapse">
+          <div class="card card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <ul>
+          <li>
+            <img src="front-end-dev-test-assets/home-expertise.svg" alt="paper and pen icon"> LOREM
+          </li>
+          <li>
+            <img src="front-end-dev-test-assets/home-hygiene.svg" alt="ppe mask icon">
+            LOREM IPSUM
+          </li>
+          <li>
+            <img src="front-end-dev-test-assets/home-lab.svg" alt="lab goggles icon">
+            LOREM IPSUM
+          </li>
+          <li>
+            <img src="front-end-dev-test-assets/home-retention.svg" alt="calendar icon">
+            LOREM
+          </li>
+        </ul>
+      </div>
     </div>
 
     <!-- jQuery & Bootstap Buddle -->
