html for four and five

--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
   </head>
   <body>
 
-    <div class="one">
+    <header>
       <img src="front-end-dev-test-assets/hero.jpg" alt="photo of San Franscisco Bay Bridge">
       <img src="front-end-dev-test-assets/logo-white.svg" alt="RoosterGrin logo">
       <h1>WELCOME TO</h1>
       <h2>Rooster Grin</h2>
       <button class="square" id="purple">Button</button>
-    </div>
+    </header>
 
-    <div class="two">
-      <div class="left">
+    <div class="one">
+      <div id="one-left">
         <h3>LOREUM IPSUM</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam fugit, cupiditate error asperiores in minus reiciendis, quidem commodi ipsam dolorum repellat aut eligendi neque voluptate eius obcaecati quos temporibus autem?</p>
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#carratCollapse" aria-expanded="false" aria-controls="carratCollapse">
+        <button 
+          class="btn btn-primary" 
+          type="button" 
+          data-toggle="collapse" 
+          data-target="#carratCollapse" 
+          aria-expanded="false" 
+          aria-controls="carratCollapse">
           Lorem ipsum
         </button>
         <div class="collapse" id="carratCollapse">
@@ -32,23 +38,29 @@
           </div>
         </div>
       </div>
-      <div class="right">
+      <div id="one-right">
         <img src="front-end-dev-test-assets/img-1.jpg" alt="climbers helping each other">
       </div>
     </div>
 
-    <div class="three">
-      <h3>LOREUM IPSUM</h3>
+    <div class="two">
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
+      <h3>LOREUM IPSUM</h3>
       <button class="square" id="orange">Button</button>
     </div>
 
-    <div class="four">
-      <div class="left">
+    <div class="three">
+      <div id="three-left">
         <h4>LOREM IPSUM</h4> 
         <h4>DOLOR SIT AMET</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#carratCollapse" aria-expanded="false" aria-controls="carratCollapse">
+        <button 
+          class="btn btn-primary" 
+          type="button" 
+          data-toggle="collapse" 
+          data-target="#carratCollapse" 
+          aria-expanded="false" 
+          aria-controls="carratCollapse">
           Lorem ipsum
         </button>
         <div class="collapse" id="carratCollapse">
@@ -57,7 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="right">
+      <div id="three-right">
         <ul>
           <li>
             <img src="front-end-dev-test-assets/home-expertise.svg" alt="paper and pen icon"> LOREM
@@ -77,6 +89,27 @@
         </ul>
       </div>
     </div>
+
+    <div class="four">
+      <img src="front-end-dev-test-assets/banner-2.jpg">
+      <h3>LOREM IPSUM</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
+      <button class="square" id="orange">Button</button>
+    </div>
+
+    <div class="five">
+      <div id="left-five">
+        <h4>LOREM IPSUM</h4> 
+        <h4>DOLOR SIT AMET</h4>
+      </div>
+      <div id="right-five">
+        
+      </div>
+    </div>
+
+    <footer>
+
+    </footer>
 
     <!-- jQuery & Bootstap Buddle -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
