--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Bootstap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/cee7a6045c.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -101,9 +104,49 @@
       <div id="left-five">
         <h4>LOREM IPSUM</h4> 
         <h4>DOLOR SIT AMET</h4>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
       </div>
       <div id="right-five">
-        
+        <div id="carouselIndicators" class="carousel slide carosel-fade" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active" 
+                data-interval="10000" 
+                data-pause='hover'>
+              <h5>John Doe 08/08/2019</h5>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+            </div>
+            <div class="carousel-item" 
+                 data-interval="10000" 
+                 data-pause='hover'>
+              <h5>Jane Doe 09/12/2020</h5>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
+            </div>
+            <div class="carousel-item" 
+                 data-interval="10000" 
+                 data-pause='hover'>
+              <h5>Janelle Doe 12/05/2018</h5>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
       </div>
     </div>
 
