footer content, basic html complete

--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
     </div>
 
     <footer>
-
+      <p id="footer-p">Follow Us:</p>
+      <ul>
+        <li><img src="front-end-dev-test-assets/instagram.svg" alt="instagram icon"></li>
+        <li><img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon"</li>
+      </ul>
     </footer>
 
     <!-- jQuery & Bootstap Buddle -->
