--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 
     <title>Rooster Grin Front End Dev Test</title>
 
+    <!-- External Syles -->
+    <link rel="stylesheet" type="text/css" href="scss/styles.css">
+    <link rel="rest-styles" type="text/css" href="reset.css">
+
     <!-- Bootstap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/cee7a6045c.js" crossorigin="anonymous"></script>
+
   </head>
+
   <body>
 
     <header>
@@ -146,7 +152,6 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-
       </div>
     </div>
 
