--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Rooster Grin Front End Dev Test</title>
 
     <!-- External Syles -->
-    <link rel="stylesheet" type="text/css" href="scss/styles.css">
-    <link rel="rest-styles" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="scss/style.css">
 
     <!-- Bootstap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
