--- a/index.html
+++ b/index.html
@@ -21,14 +21,27 @@
     <header>
       <img src="front-end-dev-test-assets/hero.jpg" alt="photo of San Franscisco Bay Bridge">
       <img src="front-end-dev-test-assets/logo-white.svg" alt="RoosterGrin logo">
-      <h1>WELCOME TO</h1>
-      <h2>Rooster Grin</h2>
-      <button class="square" id="purple">Button</button>
+      <svg viewbox="0 0 10 2">
+        <text x="5" y="1" 
+          text-anchor="middle" 
+          font-size="0.8" 
+          fill="none" 
+          stroke-width=".020" 
+          stroke="#fff" 
+          font-family="Lato"
+          letter-spacing="-0.04">
+          Welcome To
+        </text>
+      </svg>
+      <h1>Rooster Grin</h1>
+      <a href="https://www.roostergrin.com/our-work/" target="_blank">
+        <button>Designs to Make You Smile</button>
+      </a>
     </header>
 
     <div class="one">
       <div id="one-left">
-        <h3>LOREUM IPSUM</h3>
+        <h2>LOREUM IPSUM</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam fugit, cupiditate error asperiores in minus reiciendis, quidem commodi ipsam dolorum repellat aut eligendi neque voluptate eius obcaecati quos temporibus autem?</p>
         <button 
           class="btn btn-primary" 
@@ -52,7 +65,7 @@
 
     <div class="two">
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
-      <h3>LOREUM IPSUM</h3>
+      <h2>LOREUM IPSUM</h2>
       <button class="square" id="orange">Button</button>
     </div>
 
@@ -99,15 +112,15 @@
 
     <div class="four">
       <img src="front-end-dev-test-assets/banner-2.jpg">
-      <h3>LOREM IPSUM</h3>
+      <h2>LOREM IPSUM</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
       <button class="square" id="orange">Button</button>
     </div>
 
     <div class="five">
       <div id="left-five">
-        <h4>LOREM IPSUM</h4> 
-        <h4>DOLOR SIT AMET</h4>
+        <h3>LOREM IPSUM</h3> 
+        <h3>DOLOR SIT AMET</h3>
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -125,19 +138,19 @@
             <div class="carousel-item active" 
                 data-interval="10000" 
                 data-pause='hover'>
-              <h5>John Doe 08/08/2019</h5>
+              <h4>John Doe 08/08/2019</h4>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
             </div>
             <div class="carousel-item" 
                  data-interval="10000" 
                  data-pause='hover'>
-              <h5>Jane Doe 09/12/2020</h5>
+              <h4>Jane Doe 09/12/2020</h4>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
             </div>
             <div class="carousel-item" 
                  data-interval="10000" 
                  data-pause='hover'>
-              <h5>Janelle Doe 12/05/2018</h5>
+              <h4>Janelle Doe 12/05/2018</h4>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
             </div>
           </div>
