div one & two column grid mixin

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="one">
-      <div id="one-left">
+      <div class="left">
         <h2>LOREUM IPSUM</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam fugit, cupiditate error asperiores in minus reiciendis, quidem commodi ipsam dolorum repellat aut eligendi neque voluptate eius obcaecati quos temporibus autem?</p>
         <button 
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>
-      <div id="one-right">
+      <div class="right">
         <img src="front-end-dev-test-assets/img-1.jpg" alt="climbers helping each other">
       </div>
     </div>
