working on text overlay

--- a/index.html
+++ b/index.html
@@ -41,20 +41,27 @@
 
     <div class="one">
       <div class="left">
-        <h2>LOREUM IPSUM</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam fugit, cupiditate error asperiores in minus reiciendis, quidem commodi ipsam dolorum repellat aut eligendi neque voluptate eius obcaecati quos temporibus autem?</p>
+        <h2>We build for you</h2>
+        <p>Every website built by Rooster Grin is customized to the needs of our client through our design process. We focus on using images, video and text that make your business stand out from the competition. Our clients see higher conversion rates, more traffic and better search rankings because we leverage our experience and a data-driven approach to create the optimal website for your business.</p>
         <button 
-          class="btn btn-primary" 
+          class="btn" 
           type="button" 
           data-toggle="collapse" 
           data-target="#carratCollapse" 
           aria-expanded="false" 
           aria-controls="carratCollapse">
-          Lorem ipsum
+          <i class="fas fa-chevron-down"></i>
+          Our Process
         </button>
         <div class="collapse" id="carratCollapse">
           <div class="card card-body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            <ol>
+              <li>Sitemap</li>
+              <li>Mockups</li>
+              <li>Coding</li>
+              <li>Revisions</li>
+            </ol>
+            
           </div>
         </div>
       </div>
@@ -66,21 +73,22 @@
     <div class="two">
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
       <h2>LOREUM IPSUM</h2>
-      <button class="square" id="orange">Button</button>
+      <button>Button</button>
     </div>
 
     <div class="three">
       <div id="three-left">
-        <h4>LOREM IPSUM</h4> 
-        <h4>DOLOR SIT AMET</h4>
+        <h3>LOREM IPSUM</h3> 
+        <h3>DOLOR SIT AMET</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
         <button 
-          class="btn btn-primary" 
+          class="btn" 
           type="button" 
           data-toggle="collapse" 
           data-target="#carratCollapse" 
           aria-expanded="false" 
           aria-controls="carratCollapse">
+          <i class="fas fa-chevron-down"></i>
           Lorem ipsum
         </button>
         <div class="collapse" id="carratCollapse">
