--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="three">
-      <div id="three-left">
+      <div class="left">
         <h3>LOREM IPSUM</h3> 
         <h3>DOLOR SIT AMET</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
@@ -97,24 +97,31 @@
           </div>
         </div>
       </div>
-      <div id="three-right">
-        <ul>
-          <li>
-            <img src="front-end-dev-test-assets/home-expertise.svg" alt="paper and pen icon"> LOREM
-          </li>
-          <li>
-            <img src="front-end-dev-test-assets/home-hygiene.svg" alt="ppe mask icon">
-            LOREM IPSUM
-          </li>
-          <li>
-            <img src="front-end-dev-test-assets/home-lab.svg" alt="lab goggles icon">
-            LOREM IPSUM
-          </li>
-          <li>
-            <img src="front-end-dev-test-assets/home-retention.svg" alt="calendar icon">
-            LOREM
-          </li>
-        </ul>
+      <div class="right">
+          <div class="icon">
+            <div class="border">
+              <img src="front-end-dev-test-assets/home-expertise.svg" alt="paper and pen icon">
+            </div> 
+            <p>LOREM</p>
+          </div>
+          <div class="icon">
+            <div class="border">
+              <img src="front-end-dev-test-assets/home-hygiene.svg" alt="ppe mask icon">
+            </div>  
+            <p>LOREM</p>
+          </div>
+          <div class="icon">
+            <div class="border">
+              <img src="front-end-dev-test-assets/home-lab.svg" alt="lab goggles icon">
+            </div>
+            <p>LOREM</p>
+          </div>
+          <div class="icon">
+            <div class="border">
+              <img src="front-end-dev-test-assets/home-retention.svg" alt="calendar icon">
+            </div>
+            <p>LOREM</p>
+          </div>
       </div>
     </div>
 
