remove bootstrap styles, fix errors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Rooster Grin Front End Dev Test</title>
     <!-- Bootstap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/cee7a6045c.js" crossorigin="anonymous"></script>
@@ -72,8 +72,10 @@
 
     <div class="two">
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
-      <h2>LOREUM IPSUM</h2>
-      <button>Button</button>
+      <div class="content-block">
+        <h2>We work for you</h2>
+        <a href="https://www.roostergrin.com/#" target="_blank"><button>Contact Us Today</button></a>
+      </div>
     </div>
 
     <div class="three">
