div three styles

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       </svg>
       <h1>Rooster Grin</h1>
       <a href="https://www.roostergrin.com/our-work/" target="_blank">
-        <button>Designs to Make You Smile</button>
+        <button>Dentistry to Make You Smile</button>
       </a>
     </header>
 
     <div class="one">
       <div class="left">
-        <h2>We build for you</h2>
-        <p>Every website built by Rooster Grin is customized to the needs of our client through our design process. We focus on using images, video and text that make your business stand out from the competition. Our clients see higher conversion rates, more traffic and better search rankings because we leverage our experience and a data-driven approach to create the optimal website for your business.</p>
+        <h2>Health starts in the mouth</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore corrupti quia saepe perspiciatis aliquam unde exercitationem dicta quidem! Nihil aut dolorem quasi doloremque beatae vero fugiat quas asperiores. Asperiores.</p>
         <button 
           class="btn" 
           type="button" 
@@ -56,10 +56,10 @@
         <div class="collapse" id="carratCollapse">
           <div class="card card-body">
             <ol>
-              <li>Sitemap</li>
-              <li>Mockups</li>
-              <li>Coding</li>
-              <li>Revisions</li>
+              <li>Evaluation</li>
+              <li>Treatment plan</li>
+              <li>Cleaning</li>
+              <li>Schedule next visits</li>
             </ol>
             
           </div>
@@ -73,15 +73,15 @@
     <div class="two">
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
       <div class="content-block">
-        <h2>We work for you</h2>
+        <h2>Serivces for the whole family</h2>
         <a href="https://www.roostergrin.com/#" target="_blank"><button>Contact Us Today</button></a>
       </div>
     </div>
 
     <div class="three">
       <div class="left">
-        <h3>LOREM IPSUM</h3> 
-        <h3>DOLOR SIT AMET</h3>
+        <h3>Our service will</h3> 
+        <h3>make you smile</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
         <button 
           class="btn" 
@@ -101,28 +101,28 @@
       </div>
       <div class="right">
           <div class="icon">
-            <div class="border">
+            <div class="border" style="width: 104px">
               <img src="front-end-dev-test-assets/home-expertise.svg" alt="paper and pen icon">
             </div> 
-            <p>LOREM</p>
+            <p>Check Ups</p>
           </div>
           <div class="icon">
-            <div class="border">
+            <div class="border" style="width: 104px">
               <img src="front-end-dev-test-assets/home-hygiene.svg" alt="ppe mask icon">
             </div>  
-            <p>LOREM</p>
+            <p>COVID Safe</p>
           </div>
           <div class="icon">
-            <div class="border">
+            <div class="border" style="width: 104px">
               <img src="front-end-dev-test-assets/home-lab.svg" alt="lab goggles icon">
             </div>
-            <p>LOREM</p>
+            <p>Inpatient Surgery</p>
           </div>
           <div class="icon">
-            <div class="border">
+            <div class="border" style="width: 104px">
               <img src="front-end-dev-test-assets/home-retention.svg" alt="calendar icon">
             </div>
-            <p>LOREM</p>
+            <p>Easy Scheduling</p>
           </div>
       </div>
     </div>
