--- a/index.html
+++ b/index.html
@@ -129,13 +129,15 @@
 
     <div class="four">
       <img src="front-end-dev-test-assets/banner-2.jpg">
-      <h2>LOREM IPSUM</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
-      <button class="square" id="orange">Button</button>
+      <div class="content-block">
+        <h2>Special Prices for Kids!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
+        <button class="square" id="orange">Button</button>
+      </div>
     </div>
 
     <div class="five">
-      <div id="left-five">
+      <div class="left">
         <h3>LOREM IPSUM</h3> 
         <h3>DOLOR SIT AMET</h3>
         <i class="fas fa-star"></i>
@@ -144,7 +146,7 @@
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
       </div>
-      <div id="right-five">
+      <div class="right">
         <div id="carouselIndicators" class="carousel slide carosel-fade" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
