--- a/index.html
+++ b/index.html
@@ -43,18 +43,12 @@
       <div class="left">
         <h2>Health starts in the mouth</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore corrupti quia saepe perspiciatis aliquam unde exercitationem dicta quidem! Nihil aut dolorem quasi doloremque beatae vero fugiat quas asperiores. Asperiores.</p>
-        <button 
-          class="btn" 
-          type="button" 
-          data-toggle="collapse" 
-          data-target="#carratCollapse" 
-          aria-expanded="false" 
-          aria-controls="carratCollapse">
+        <button>
           <i class="fas fa-chevron-down"></i>
           Our Process
         </button>
-        <div class="collapse" id="carratCollapse">
-          <div class="card card-body">
+        <div class="collapse">
+          <div>
             <ol>
               <li>Evaluation</li>
               <li>Treatment plan</li>
@@ -83,18 +77,12 @@
         <h3>Our service will</h3> 
         <h3>make you smile</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
-        <button 
-          class="btn" 
-          type="button" 
-          data-toggle="collapse" 
-          data-target="#carratCollapse" 
-          aria-expanded="false" 
-          aria-controls="carratCollapse">
+        <button>
           <i class="fas fa-chevron-down"></i>
           Lorem ipsum
         </button>
-        <div class="collapse" id="carratCollapse">
-          <div class="card card-body">
+        <div class="collapse">
+          <div>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
           </div>
         </div>
@@ -147,41 +135,18 @@
         <i class="fas fa-star"></i>
       </div>
       <div class="right">
-        <div id="carouselIndicators" class="carousel slide carosel-fade" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active" 
-                data-interval="10000" 
-                data-pause='hover'>
-              <h4>John Doe 08/08/2019</h4>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
-            </div>
-            <div class="carousel-item" 
-                 data-interval="10000" 
-                 data-pause='hover'>
-              <h4>Jane Doe 09/12/2020</h4>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
-            </div>
-            <div class="carousel-item" 
-                 data-interval="10000" 
-                 data-pause='hover'>
-              <h4>Janelle Doe 12/05/2018</h4>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
-            </div>
+          <div>
+            <h4>John Doe 08/08/2019</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
           </div>
-          <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+          <div>
+            <h4>Jane Doe 09/12/2020</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
+          </div>
+          <div>
+            <h4>Janelle Doe 12/05/2018</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
+          </div>
       </div>
     </div>
 
@@ -192,10 +157,6 @@
         <li><img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon"</li>
       </ul>
     </footer>
-
-    <!-- jQuery & Bootstap Buddle -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- External JS -->
     <script type="text/javascript" src="bundle.js"></script>
