fix compiler issues, adjusted desktop

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 
     <div class="three">
       <div class="left">
-        <h3>Our service will</h3> 
-        <h3>make you smile</h3>
+        <h3>We'll have you smiling</h3> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
         <button>
           <i class="fas fa-chevron-down"></i>
@@ -120,7 +119,7 @@
       <div class="content-block">
         <h2>Special Prices for Kids!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
-        <button class="square" id="orange">Button</button>
+        <button>Meet our providers</button>
       </div>
     </div>
 
