div five styling sans carosel

--- a/index.html
+++ b/index.html
@@ -125,13 +125,14 @@
 
     <div class="five">
       <div class="left">
-        <h3>LOREM IPSUM</h3> 
-        <h3>DOLOR SIT AMET</h3>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
+        <h3>Clients give us top marks</h3>
+        <div id="stars"> 
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
       </div>
       <div class="right">
           <div>
