--- a/index.html
+++ b/index.html
@@ -151,11 +151,13 @@
     </div>
 
     <footer>
-      <p id="footer-p">Follow Us:</p>
-      <ul>
-        <li><img src="front-end-dev-test-assets/instagram.svg" alt="instagram icon"></li>
-        <li><img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon"</li>
-      </ul>
+      <div>
+        <p>Follow Us:</p>
+        <div>
+          <img src="front-end-dev-test-assets/instagram.svg" alt="instagram icon">
+          <img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon">
+        </div>
+      </div>
     </footer>
 
     <!-- External JS -->
