static styling for desktop complete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </text>
       </svg>
       <h1>Rooster Grin</h1>
-      <a href="https://www.roostergrin.com/our-work/" target="_blank">
+      <a href="https://www.baltimorewaterfrontdental.com/services/general-dentistry" target="_blank">
         <button>Dentistry to Make You Smile</button>
       </a>
     </header>
@@ -68,7 +68,9 @@
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
       <div class="content-block">
         <h2>Serivces for the whole family</h2>
-        <a href="https://www.roostergrin.com/#" target="_blank"><button>Contact Us Today</button></a>
+        <a href="https://www.baltimorewaterfrontdental.com/contact" target="_blank">
+          <button>Contact Us Today</button>
+        </a>
       </div>
     </div>
 
@@ -119,7 +121,9 @@
       <div class="content-block">
         <h2>Special Prices for Kids!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
-        <button>Meet our providers</button>
+        <a href="https://www.baltimorewaterfrontdental.com/about" target="_blank">
+          <button>Meet our providers</button>
+        </a>
       </div>
     </div>
 
@@ -154,8 +158,12 @@
       <div>
         <p>Follow Us:</p>
         <div>
-          <img src="front-end-dev-test-assets/instagram.svg" alt="instagram icon">
-          <img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon">
+          <a href="https://www.instagram.com/waterfrontdental/?hl=en" target="_blank">
+            <img src="front-end-dev-test-assets/instagram.svg" alt="instagram icon">
+          </a>
+          <a href="https://www.facebook.com/baltimorewaterfrontdental/" target="_blank">
+            <img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon">
+          </a>
         </div>
       </div>
     </footer>
