--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Rooster Grin Front End Dev Test</title>
-    <!-- Bootstap CSS -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
+    <!-- 3d-slide-master -->
+    <link rel="stylesheet" href="3d-slider-master/style.css">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/cee7a6045c.js" crossorigin="anonymous"></script>
@@ -139,18 +139,28 @@
         </div>
       </div>
       <div class="right">
-          <div>
-            <h4>John Doe 08/08/2019</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+        <div class="container">
+          <div class="button" onclick="shiftLeft()"><img src="https://image.ibb.co/mRsEb7/left_arrow.png" alt=""></div>
+          <div class="cards-wrapper">
+              <ul class="cards__container">
+                  <li class="box">
+                    <h4>John Doe 08/08/2019</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+                  </li>
+                  <li class="box">
+                    <h4>Jane Doe 09/12/2020</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+                  </li>
+                  <li class="box">
+                    <h4>Janelle Doe 12/05/2018</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+                  </li>
+              </ul>
+            </div>
+          <div class="button" onclick="shiftRight()">
+            <img src="https://image.ibb.co/dfPSw7/right_arrow.png" alt="">
           </div>
-          <div>
-            <h4>Jane Doe 09/12/2020</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
-          </div>
-          <div>
-            <h4>Janelle Doe 12/05/2018</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
-          </div>
+        </div>
       </div>
     </div>
 
@@ -169,6 +179,6 @@
     </footer>
 
     <!-- External JS -->
-    <script type="text/javascript" src="bundle.js"></script>
+    <script src='3d-slider-master/app.js'></script>
   </body>
 </html>
