--- a/index.html
+++ b/index.html
@@ -138,20 +138,39 @@
           <i class="fas fa-star"></i>
         </div>
       </div>
+
       <div class="right">
-          <div>
-            <h4>John Doe 08/08/2019</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+          <div class="carousel">
+            <button class="carousel-button">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <div class="carousel-track-container">
+              <ul class="carousel-track">
+                <li class="carousel-slide">
+                  <h4>John Doe 08/08/2019</h4>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+                </li>
+                <li class="carousel-slide">
+                  <h4>Jane Doe 09/12/2020</h4>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+                </li>
+                <li class="carousel-slide">
+                  <h4>Janelle Doe 12/05/2018</h4>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
+                </li>
+              </ul>
+            </div>
+            <button class="carousel-button">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+            <div class="carousel-nav">
+              <button class="carousel-indicator"></button>
+              <button class="carousel-indicator"></button>
+              <button class="carousel-indicator"></button>
+            </div>
           </div>
-          <div>
-            <h4>Jane Doe 09/12/2020</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
-          </div>
-          <div>
-            <h4>Janelle Doe 12/05/2018</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>            
-          </div>
-      </div>
+        </div>
+        
     </div>
 
     <footer>
