--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </button>
             <div class="carousel-track-container">
               <ul class="carousel-track">
-                <li class="carousel-slide">
+                <li class="carousel-slide current-slide">
                   <div class="slide-content">
                     <h4>John Doe 08/08/2019</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore ab voluptates assumenda odit, nesciunt porro reiciendis? Omnis, nemo animi tempora aperiam iure cumque, numquam obcaecati labore laboriosam temporibus quibusdam laborum!</p>
@@ -194,6 +194,6 @@
     </footer>
 
     <!-- External JS -->
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="JS/carousel.js"></script>
   </body>
 </html>
