hide show arrow

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <div class="right">
           <div class="carousel">
-            <button class="carousel-button--left">
+            <button class="carousel-button--left hidden">
               <i class="fas fa-chevron-left"></i>
             </button>
             <div class="carousel-track-container">
