added intersection observers and fade in on wide img divs

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <header>
       <img src="front-end-dev-test-assets/hero.jpg" alt="photo of San Franscisco Bay Bridge">
       <img src="front-end-dev-test-assets/logo-white.svg" alt="RoosterGrin logo">
-      <svg viewbox="0 0 10 2">
-        <text x="5" y="1" 
+      <div class="fade-in">
+        <svg viewbox="0 0 10 2">
+          <text x="5" y="1" 
           text-anchor="middle" 
           font-size="0.8" 
           fill="none" 
@@ -33,12 +34,13 @@
           font-family="Lato"
           letter-spacing="-0.04">
           Welcome To
-        </text>
-      </svg>
-      <h1>Rooster Grin</h1>
-      <a href="https://www.baltimorewaterfrontdental.com/services/general-dentistry" target="_blank">
+          </text>
+        </svg>
+        <h1>Rooster Grin</h1>
+        <a href="https://www.baltimorewaterfrontdental.com/services/general-dentistry" target="_blank">
         <button>Dentistry to Make You Smile</button>
-      </a>
+        </a>
+      </div>
     </header>
 
     <div class="one">
@@ -61,7 +63,7 @@
 
     <div class="two">
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
-      <div class="content-block">
+      <div class="content-block fade-in">
         <h2>Serivces for the whole family</h2>
         <a href="https://www.baltimorewaterfrontdental.com/contact" target="_blank">
           <button>Contact Us Today</button>
@@ -107,7 +109,7 @@
 
     <div class="four">
       <img src="front-end-dev-test-assets/banner-2.jpg">
-      <div class="content-block">
+      <div class="content-block fade-in">
         <h2>Special Prices for Kids!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
         <a href="https://www.baltimorewaterfrontdental.com/about" target="_blank">
@@ -183,6 +185,7 @@
     </footer>
 
     <!-- External JS -->
-    <script type="text/javascript" src="JS/carousel.js"></script>
+    <script src="JS/carousel.js"></script>
+    <script src="JS/observers.js"></script>
   </body>
 </html>
