--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <div class="one">
-      <div class="left">
+      <div class="left slide-in">
         <h2>Health starts in the mouth</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore corrupti quia saepe perspiciatis aliquam unde exercitationem dicta quidem! Nihil aut dolorem quasi doloremque beatae vero fugiat quas asperiores. Asperiores.</p>
         <sl-details summary="Our Process">
@@ -56,7 +56,7 @@
           </ol>
         </sl-details>
       </div>
-      <div class="right">
+      <div class="right slide-in">
         <img src="front-end-dev-test-assets/img-1.jpg" alt="climbers helping each other">
       </div>
     </div>
@@ -72,14 +72,14 @@
     </div>
 
     <div class="three">
-      <div class="left">
+      <div class="left slide-in">
         <h3>We'll have you smiling</h3> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse est doloribus alias fugit velit quia. Deserunt in dolores officiis aperiam voluptate id ipsa eveniet excepturi accusamus voluptatum. Animi, fugiat laudantium!</p>
         <sl-details summary="Check this out">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </sl-details>
       </div>
-      <div class="right">
+      <div class="right slide-in">
           <div class="icon">
             <div class="border" style="width: 104px">
               <img src="front-end-dev-test-assets/home-expertise.svg" alt="paper and pen icon">
@@ -119,7 +119,7 @@
     </div>
 
     <div class="five">
-      <div class="left">
+      <div class="left slide-in">
         <h3>Clients give us top marks</h3>
         <div id="stars"> 
           <i class="fas fa-star"></i>
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <div class="right">
+      <div class="right slide-in">
           <div class="carousel">
             <button class="carousel-button--left hidden">
               <i class="fas fa-chevron-left"></i>
