remove live links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </text>
         </svg>
         <h1>Rooster Grin</h1>
-        <a href="https://www.baltimorewaterfrontdental.com/services/general-dentistry" target="_blank">
+        <a href="" target="_blank">
         <button>Dentistry to Make You Smile</button>
         </a>
       </div>
@@ -65,7 +65,7 @@
       <img src="front-end-dev-test-assets/banner-1.jpg" alt="parent with child and laptop">
       <div class="content-block fade-in">
         <h2>Serivces for the whole family</h2>
-        <a href="https://www.baltimorewaterfrontdental.com/contact" target="_blank">
+        <a href="" target="_blank">
           <button>Contact Us Today</button>
         </a>
       </div>
@@ -112,7 +112,7 @@
       <div class="content-block fade-in">
         <h2>Special Prices for Kids!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloremque libero illum perspiciatis amet impedit quos! Repellat, officiis. Nemo numquam quaerat architecto accusamus suscipit atque. Ea voluptatibus nemo vitae quaerat.</p>
-        <a href="https://www.baltimorewaterfrontdental.com/about" target="_blank">
+        <a href="" target="_blank">
           <button>Meet our providers</button>
         </a>
       </div>
@@ -174,10 +174,10 @@
       <div>
         <p>Follow Us:</p>
         <div>
-          <a href="https://www.instagram.com/waterfrontdental/?hl=en" target="_blank">
+          <a href="" target="_blank">
             <img src="front-end-dev-test-assets/instagram.svg" alt="instagram icon">
           </a>
-          <a href="https://www.facebook.com/baltimorewaterfrontdental/" target="_blank">
+          <a href="" target="_blank">
             <img src="front-end-dev-test-assets/facebook.svg" alt="facebook icon">
           </a>
         </div>
